--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "md-links",
   "version": "0.1.0",
+  "description": "Paths MD",
+  "main": "index.js",
+  "bin": {
+    "mdlinks": "index.js"
+  },
   "engines": {
     "node": ">=16.x"
+  },
+  "dependencies": {
+    "colors": "^1.4.0",
+    "fetch": "^1.1.0",
+    "fs": "^0.0.1-security",
+    "node-fetch": "^2.6.6",
+    "parse-md": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
